objects/Transaction__c.object
<CustomObject>
    <description>Keeps the Response string from Wunderman system.</description>
    <fields>
        <fullName>Campaign_Member_Status__c</fullName>
        <label>Campaign Member Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to Process</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Added Members</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Transactions</relationshipLabel>
        <relationshipName>Transactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Failed_Contact_Id__c</fullName>
        <label>Failed Contact Id</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_SFDC_Id__c</fullName>
        <description>Will have lead salesforce id, later can be used to debug issue.</description>
        <label>Lead SFDC Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missed_Profile_Count__c</fullName>
        <label>Missed Profiles</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_Schema__c</fullName>
        <label>Request Schema</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Request_URL__c</fullName>
        <label>Request URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Schema__c</fullName>
        <label>Response Schema</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Transaction_Source__c</fullName>
        <label>Transaction Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Name Match</fullName>
                </value>
                <value>
                    <fullName>Query API Builder</fullName>
                </value>
                <value>
                    <fullName>Audience Upload</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WM_List_Order_Id__c</fullName>
        <label>Wunderman List Order Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Request_Schema__c</columns>
        <columns>Response_Schema__c</columns>
        <columns>Campaign__c</columns>
        <columns>Type__c</columns>
        <columns>WM_List_Order_Id__c</columns>
        <columns>Campaign_Member_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label># All</label>
    </listViews>
    <listViews>
        <fullName>Contact_Ids</fullName>
        <columns>NAME</columns>
        <columns>Response_Schema__c</columns>
        <columns>Campaign__c</columns>
        <columns>WM_List_Order_Id__c</columns>
        <columns>Campaign_Member_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Campaign__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Contact Ids</label>
    </listViews>
    <listViews>
        <fullName>Transactions</fullName>
        <columns>NAME</columns>
        <columns>Transaction_Source__c</columns>
        <columns>Request_URL__c</columns>
        <columns>Request_Schema__c</columns>
        <columns>Response_Schema__c</columns>
        <columns>Type__c</columns>
        <columns>Missed_Profile_Count__c</columns>
        <columns>Campaign_Member_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Transactions</label>
    </listViews>
    <nameField>
        <displayFormat>VR{000000000}</displayFormat>
        <label>Transaction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>